Made some changes to menu headers. Corrected vertical alignment.

--- a/src/css/menu-header.css
+++ b/src/css/menu-header.css
@@ -1,10 +1,8 @@
 .menu-header {
   width: 23.33vw;
   height: 100%;
-  display: inline-block;
+  display: inline-table;
   text-align: center;
-  padding: 50px;
-  box-sizing: border-box;
 }
 
 .menu-header:hover {
@@ -12,17 +10,21 @@
   cursor: pointer;
 }
 
+.main-header-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 .main-header-icon {
   width: 100px;
   height: 100px;
-  display: block;
   background-image: url("../images/projects.png");
   background-size: 100% 100%;
   margin: 0 auto;
 }
 
 .main-header-title {
-  display: block;
+  margin-bottom: 0px;
   color: #fff;
   font-family: Karla;
   font-size: 25px;
