--- a/src/css/menubar.css
+++ b/src/css/menubar.css
@@ -2,7 +2,7 @@
   background-color: #ea212d;
   height: 20vh;
   width: 100%;
-  min-height: 150px;
+  min-height: 200px;
 }
 
 .menu-bar-area {
